cluster/apps/default/homepage/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app homepage
  labels:
    app.kubernetes.io/name: *app
spec:
  revisionHistoryLimit: 3
  replicas: 3
  serviceName: *app
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      serviceAccountName: *app
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: *app
          image: ghcr.io/gethomepage/homepage:v0.9.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: homepage-port
              containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
            - mountPath: /app/config/logs
              name: logs
          resources: {}
      volumes:
        - name: config-volume
          configMap:
            name: homepage
            items:
            - key: kubernetes.yaml
              path: kubernetes.yaml
            - key: custom.js
              path: custom.js
            - key: custom.css
              path: custom.css
            - key: bookmarks.yaml
              path: bookmarks.yaml
            - key: docker.yaml
              path: docker.yaml
            - key: services.yaml
              path: services.yaml
            - key: settings.yaml
              path: settings.yaml
            - key: widgets.yaml
              path: widgets.yaml
        - name: logs
          emptyDir: {}
