cluster/apps/default/homepage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: homepage
