cluster/apps/default/homepage/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`home.${SECRET_DOMAIN_0}`)"
      kind: Rule
      # middlewares:
      #   - name: ak-outpost-authentik-embedded-outpost
      #     namespace: authentik
      services:
        - name: homepage-svc
          port: 80
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls: {}
